# card_system

./: 14130130295上机作业.docx  Bus.cpp  Bus.h  CMakeLists.txt  README.md  Site.cpp  Site.h  bus_info_script.cpp  create.sql  gitTest.txt  main.cpp  person.cpp  person.h  system.cpp  system.h  test.cpp  test.db
Bus/: CMakeLists.txt  CommonBus.cpp  CommonBus.h
Person/: CMakeLists.txt  Restrict.cpp  Restrict.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h
sqlite3/: CMakeLists.txt  DataBase.cpp  DataBase.h  Insert.cpp  Insert.h  Query.cpp  Query.h  Update.cpp  Update.h  sqlite3.h  test.cpp
